--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -21344,6 +21344,221 @@ a.focus .summary_header {
   width: 250px;
 }
 
+.bureau-mission_media .image-container {
+  margin-left: 10px;
+}
+
+.bureau-bio .media_image {
+  width: 125px;
+}
+
+.bureau-bio .media_image {
+  width: 80px;
+}
+
+.bureau-bio .media_image {
+  width: 80px;
+}
+
+.bureau-bio_name {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0.22727273em;
+  font-size: 1.375em;
+  line-height: 1.27272727;
+  margin-bottom: .85em !important;
+}
+
+.bureau-bio_name em,
+.bureau-bio_name i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.bureau-bio_name strong,
+.bureau-bio_name b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.bureau-bio_name em,
+.bureau-bio_name i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.bureau-bio_name strong,
+.bureau-bio_name b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.bureau-bio_name em,
+.bureau-bio_name i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.bureau-bio_name strong,
+.bureau-bio_name b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.bureau-bio_name em,
+.bureau-bio_name i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name em,
+.lt-ie9 .bureau-bio_name i {
+  font-style: normal !important;
+}
+
+.bureau-bio_name strong,
+.bureau-bio_name b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name strong,
+.lt-ie9 .bureau-bio_name b {
+  font-weight: normal !important;
+}
+
+.bureau-bio_name {
+  margin-top: 0;
+  margin-bottom: 0.27777778em;
+  font-size: 1.125em;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.22222222;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
+.bureau-bio_name {
+  margin-top: 0;
+  margin-bottom: 0.27777778em;
+  font-size: 1.125em;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.22222222;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .bureau-bio_name {
+  font-weight: normal !important;
+}
+
 /* ==========================================================================
    cfgov-refresh
    media
