Fixes css comment formatting in media.less.

--- a/static/css/media.less
+++ b/static/css/media.less
@@ -3,7 +3,6 @@
    media
    ========================================================================== */
 
-
 /* topdoc
   name: Media 
   family: cfgov-media
@@ -54,6 +53,7 @@
   tags:
     - cfgov-media
 */
+
 .media {
     display: block;
     .u-clearfix;
@@ -101,3 +101,9 @@
         width: auto;
     }
 }
+
+
+/* topdoc
+    name: EOF
+    eof: true
+*/
