--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9014,6 +9014,31 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   font-size: 1.375em;
   line-height: 1;
 }
+.expandable__mobile-only .expandable_target {
+  display: none;
+}
+@media only all and (max-width: 37.4375em) {
+  .expandable__mobile-only .expandable_target {
+    display: block;
+    padding: 0.625em 0;
+    border: dotted #0072ce;
+    border-width: 1px 0;
+  }
+  .expandable__mobile-only .expandable_target .expandable_label {
+    color: #0072ce;
+  }
+}
+@media only all and (max-width: 37.4375em) {
+  .expandable__mobile-only .expandable_target {
+    display: block;
+    padding: 0.625em 0;
+    border: dotted #0072ce;
+    border-width: 1px 0;
+  }
+  .expandable__mobile-only .expandable_target .expandable_label {
+    color: #0072ce;
+  }
+}
 /* topdoc
     name: EOF
     eof: true
@@ -20654,6 +20679,10 @@ a.focus .summary_header {
   .lt-ie9 .bureau-bio_name {
     font-weight: normal !important;
   }
+}
+.content__max-width {
+  width: 100%;
+  max-width: 620px;
 }
 /* ==========================================================================
    cfgov-refresh
