--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6335,7 +6335,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   background-color: #babbbd;
 }
 .grid_column__left-divider {
-  padding-left: 30px;
+  border-left-width: 30px;
 }
 .grid_column__left-divider:before {
   content: "";
@@ -6345,7 +6345,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   width: 1px;
   display: block;
   background-color: #babbbd;
-  margin-left: -45px;
+  margin-left: -30px;
 }
 /* topdoc
   name: Width-specific display
@@ -6569,6 +6569,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     Full-width column (spans 12 columns)
                 </div>
             </div>
+        </div>
+        <div class="content-l">
             <div class="content-l_col content-l_col-1-2">
                 <div style="background: #F1F2F2;
                             text-align: center;
@@ -6585,6 +6587,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     Half-width column (spans 6/12 columns)
                 </div>
             </div>
+        </div>
+        <div class="content-l">
             <div class="content-l_col content-l_col-1-3">
                 <div style="background: #F1F2F2;
                             text-align: center;
@@ -6609,6 +6613,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     Third-width column (spans 4/12 columns)
                 </div>
             </div>
+        </div>
+        <div class="content-l">
             <div class="content-l_col content-l_col-2-3">
                 <div style="background: #F1F2F2;
                             text-align: center;
@@ -6663,6 +6669,76 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
            modifier converts it back into a full-width container (801px).
            .content-l_col-1-3 on the other hand would have a much smaller range,
            768 to 801px."
+    - name: Large gutters modifier
+      markup: |
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-1">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Full-width column (spans 12 columns)
+                </div>
+            </div>
+        </div>
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+        </div>
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+        </div>
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-2-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;">
+                    Two thirds-width column (spans 8/12 columns)
+                </div>
+            </div>
+        </div>
+      codenotes:
+        - .content-l.content-l__large-gutters
+      notes:
+        - "Adds 30px gutters to all columns by simply adding the
+           .content-l__large-gutters modifier."
   tags:
     - cfgov-layout
 */
@@ -6675,6 +6751,16 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     position: relative;
     margin-left: -15px;
     margin-right: -15px;
+  }
+}
+@media only all and (min-width: 37.5em) {
+  .content-l__large-gutters {
+    margin-left: -30px;
+    margin-right: -30px;
+  }
+  .content-l__large-gutters .content-l_col {
+    border-left-width: 30px;
+    border-right-width: 30px;
   }
 }
 .content-l_col + .content-l_col {
@@ -6954,11 +7040,15 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   patterns:
     - name: .content-l_col__before-divider (modifier)
       markup: |
-        <div class="content-l">
+        <div class="content-l content-l__large-gutters">
             <div class="content-l_col content-l_col-1-2">
+                <img src="http://placekitten.com/600/320" alt="">
+                <br>
                 Half-width column (spans 6/12 columns)
             </div>
             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                <img src="http://placekitten.com/600/320" alt="">
+                <br>
                 Half-width column (spans 6/12 columns)
             </div>
         </div>
@@ -6966,7 +7056,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
         <!-- Starting a new .content-l so that the dividers from
              .content-l_col.content-l_col-1-2.content-l_col__before-divider
              won't overlap the .content-l_col-1-3 columns. -->
-        <div class="content-l">
+        <div class="content-l content-l__large-gutters">
             <div class="content-l_col content-l_col-1-3">
                 Third-width column (spans 4/12 columns)
             </div>
@@ -6993,7 +7083,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 @media only all and (min-width: 37.5em) {
   .content-l_col__before-divider.content-l_col-1-2 {
-    padding-left: 30px;
+    border-left-width: 30px;
   }
   .content-l_col__before-divider.content-l_col-1-2:before {
     content: "";
@@ -7003,7 +7093,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     width: 1px;
     display: block;
     background-color: #babbbd;
-    margin-left: -45px;
+    margin-left: -30px;
   }
 }
 @media only all and (max-width: 47.9375em) {
@@ -7017,7 +7107,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 @media only all and (min-width: 48em) {
   .content-l_col__before-divider.content-l_col-1-3 {
-    padding-left: 30px;
+    border-left-width: 30px;
   }
   .content-l_col__before-divider.content-l_col-1-3:before {
     content: "";
@@ -7027,7 +7117,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     width: 1px;
     display: block;
     background-color: #babbbd;
-    margin-left: -45px;
+    margin-left: -30px;
   }
 }
 /* topdoc
