--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7252,7 +7252,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 
 .grid_column__left-divider {
-  padding-left: 30px;
+  border-left-width: 30px;
 }
 
 .grid_column__left-divider:before {
@@ -7263,7 +7263,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   width: 1px;
   display: block;
   background-color: #babbbd;
-  margin-left: -45px;
+  margin-left: -30px;
 }
 
 /* topdoc
@@ -7498,6 +7498,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     Full-width column (spans 12 columns)
                 </div>
             </div>
+        </div>
+        <div class="content-l">
             <div class="content-l_col content-l_col-1-2">
                 <div style="background: #F1F2F2;
                             text-align: center;
@@ -7514,6 +7516,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     Half-width column (spans 6/12 columns)
                 </div>
             </div>
+        </div>
+        <div class="content-l">
             <div class="content-l_col content-l_col-1-3">
                 <div style="background: #F1F2F2;
                             text-align: center;
@@ -7538,6 +7542,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
                     Third-width column (spans 4/12 columns)
                 </div>
             </div>
+        </div>
+        <div class="content-l">
             <div class="content-l_col content-l_col-2-3">
                 <div style="background: #F1F2F2;
                             text-align: center;
@@ -7592,6 +7598,76 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
            modifier converts it back into a full-width container (801px).
            .content-l_col-1-3 on the other hand would have a much smaller range,
            768 to 801px."
+    - name: Large gutters modifier
+      markup: |
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-1">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Full-width column (spans 12 columns)
+                </div>
+            </div>
+        </div>
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+        </div>
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+        </div>
+        <div class="content-l content-l__large-gutters">
+            <div class="content-l_col content-l_col-2-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;">
+                    Two thirds-width column (spans 8/12 columns)
+                </div>
+            </div>
+        </div>
+      codenotes:
+        - .content-l.content-l__large-gutters
+      notes:
+        - "Adds 30px gutters to all columns by simply adding the
+           .content-l__large-gutters modifier."
   tags:
     - cfgov-layout
 */
@@ -7605,6 +7681,16 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   position: relative;
   margin-left: -15px;
   margin-right: -15px;
+}
+
+.content-l__large-gutters {
+  margin-left: -30px;
+  margin-right: -30px;
+}
+
+.content-l__large-gutters .content-l_col {
+  border-left-width: 30px;
+  border-right-width: 30px;
 }
 
 .content-l_col + .content-l_col {
@@ -7894,11 +7980,15 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   patterns:
     - name: .content-l_col__before-divider (modifier)
       markup: |
-        <div class="content-l">
+        <div class="content-l content-l__large-gutters">
             <div class="content-l_col content-l_col-1-2">
+                <img src="http://placekitten.com/600/320" alt="">
+                <br>
                 Half-width column (spans 6/12 columns)
             </div>
             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                <img src="http://placekitten.com/600/320" alt="">
+                <br>
                 Half-width column (spans 6/12 columns)
             </div>
         </div>
@@ -7906,7 +7996,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
         <!-- Starting a new .content-l so that the dividers from
              .content-l_col.content-l_col-1-2.content-l_col__before-divider
              won't overlap the .content-l_col-1-3 columns. -->
-        <div class="content-l">
+        <div class="content-l content-l__large-gutters">
             <div class="content-l_col content-l_col-1-3">
                 Third-width column (spans 4/12 columns)
             </div>
@@ -7924,7 +8014,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 */
 
 .content-l_col__before-divider.content-l_col-1-2 {
-  padding-left: 30px;
+  border-left-width: 30px;
 }
 
 .content-l_col__before-divider.content-l_col-1-2:before {
@@ -7935,11 +8025,11 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   width: 1px;
   display: block;
   background-color: #babbbd;
-  margin-left: -45px;
+  margin-left: -30px;
 }
 
 .content-l_col__before-divider.content-l_col-1-3 {
-  padding-left: 30px;
+  border-left-width: 30px;
 }
 
 .content-l_col__before-divider.content-l_col-1-3:before {
@@ -7950,7 +8040,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   width: 1px;
   display: block;
   background-color: #babbbd;
-  margin-left: -45px;
+  margin-left: -30px;
 }
 
 /* topdoc
